[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omnipulse-agent"
version = "1.0.0"
authors = [
  { name="OmniPulse Team", email="team@omnipulse.dev" }
]
description = "The Agentic Control Plane for the OmniPulse Zero-Copy Hashing Architecture"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pyarrow>=14.0",
    "numpy>=1.26",
    "anthropic>=0.28",
    "httpx>=0.27",
    "kubernetes>=29.0",
    "prometheus-client>=0.20",
]
